# senior-project

./: .gitignore  CMakeLists.txt  build.sh  myapp  run.sh  sound.cpp  sound.h  tutorial.cxx
fmod/api/lowlevel/examples/make/: play_sound.makefile
fmod/api/studio/lib/arm/: libfmodstudio.so.6.1  libfmodstudioL.so.6.1
fmod/api/studio/lib/armhf/: libfmodstudio.so.6.1  libfmodstudioL.so.6.1
fmod/api/studio/lib/x86/: libfmodstudio.so.6.1  libfmodstudioL.so.6.1
fmod/api/studio/lib/x86_64/: libfmodstudio.so.6.1  libfmodstudioL.so.6.1
fmod/doc/: FMOD Studio Programmers API for Linux.chm
glfw/: CMakeLists.txt
include/sound/: FMODDriver.h
src/: CMakeLists.txt  main.cpp
src/sound/: FMODDriver.cpp
